tests/ui/feature-gates/feature-gate-xop_target_feature.stderr
error[E0658]: the target feature `xop` is currently unstable
  --> $DIR/feature-gate-xop_target_feature.rs:2:18
   |
LL | #[target_feature(enable = "xop")]
   |                  ^^^^^^^^^^^^^^
   |
   = note: see issue #127208 <https://github.com/rust-lang/rust/issues/127208> for more information
   = help: add `#![feature(xop_target_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
